@startuml
class com.example.models.Order {
- String orderId
- String employeeId
- String customerId
- String orderDate
+ String getOrderId()
+ void setOrderId(String)
+ String getEmployeeId()
+ void setEmployeeId(String)
+ String getCustomerId()
+ void setCustomerId(String)
+ String getOrderDate()
+ void setOrderDate(String)
+ String toString()
}


class com.example.models.ListUserAccount {
+ {static} ArrayList<UserAccount> getUserAccounts()
+ {static} UserAccount login(String,String)
}

class com.example.models.Employee {
- String id
- String name
- String phone
- String birthPlace
+ String getBirthplace()
+ void setBirthplace(String)
+ String getId()
+ void setId(String)
+ String getName()
+ void setName(String)
+ String getPhone()
+ void setPhone(String)
}


class com.example.models.Department {
- String id
- String name
- ArrayList<Employee> listOfEmployee
+ String getId()
+ void setId(String)
+ String getName()
+ void setName(String)
+ String toString()
+ void addEmployee(Employee)
+ void addListEmployee(ArrayList<Employee>)
+ ArrayList<Employee> getListOfEmployee()
+ void removeEmployee(Employee)
+ void removeListEmployee(ArrayList<Employee>)
}


class com.example.models.Category {
- String cateId
- String cateName
- String cateDesc
+ String getCateId()
+ void setCateId(String)
+ String getCateName()
+ void setCateName(String)
+ String getCateDesc()
+ void setCateDesc(String)
+ String toString()
}


class com.example.models.Product {
- String productId
- String productName
- int quantity
- double price
- double coupon
- double VAT
- String cateId
+ String getCateId()
+ void setCateId(String)
+ String getProductId()
+ void setProductId(String)
+ String getProductName()
+ void setProductName(String)
+ int getQuantity()
+ void setQuantity(int)
+ double getPrice()
+ void setPrice(double)
+ double getCoupon()
+ void setCoupon(double)
+ double getVAT()
+ void setVAT(double)
+ String toString()
}


class com.example.models.OrderDetail {
- String orderDetailId
- String orderId
- String productId
- int quantity
- double price
- double coupon
- double VAT
+ String getOrderDetailId()
+ void setOrderDetailId(String)
+ String getOrderId()
+ void setOrderId(String)
+ String getProductId()
+ void setProductId(String)
+ int getQuantity()
+ void setQuantity(int)
+ double getPrice()
+ void setPrice(double)
+ double getCoupon()
+ void setCoupon(double)
+ double getVAT()
+ void setVAT(double)
+ String toString()
}


class com.example.models.DataWareHouse {
+ {static} ArrayList<Category> getCategories()
+ {static} ArrayList<Product> getProducts()
}

class com.example.models.Customer {
- String customerId
- String customerName
- String address
- String phone
- String email
- Date birthDay
+ String getCustomerId()
+ void setCustomerId(String)
+ String getCustomerName()
+ void setCustomerName(String)
+ String getAddress()
+ void setAddress(String)
+ String getPhone()
+ void setPhone(String)
+ String getEmail()
+ void setEmail(String)
+ Date getBirthDay()
+ void setBirthDay(Date)
+ String toString()
}


class com.example.models.UserAccount {
- String username
- String password
- String role
- String displayName
- boolean saved
+ String getUsername()
+ void setUsername(String)
+ String getPassword()
+ void setPassword(String)
+ String getRole()
+ void setRole(String)
+ String getDisplayName()
+ void setDisplayName(String)
+ boolean isSaved()
+ void setSaved(boolean)
+ String toString()
}




java.io.Serializable <|.. com.example.models.Order
java.io.Serializable <|.. com.example.models.Employee
java.io.Serializable <|.. com.example.models.Category
java.io.Serializable <|.. com.example.models.Product
java.io.Serializable <|.. com.example.models.OrderDetail
java.io.Serializable <|.. com.example.models.Customer
java.io.Serializable <|.. com.example.models.UserAccount
@enduml